v5/k8s/base/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iris-ml
  labels:
    app.kubernetes.io/name: iris-ml
    app.kubernetes.io/part-of: iris-ml-platform
